<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	<include layout="@layout/common_head"
	    android:id="@+id/i_head"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/header_height"/>
	<!-- 首页广告banner  -->  
	<RelativeLayout 
	    android:id="@+id/ll_adv"
	    android:layout_below="@+id/i_head"
		 android:layout_width="fill_parent"
		 android:layout_height="114dp"
		 android:orientation="vertical">
	     <com.gezitech.widget.ExtendViewFlipper 
	       android:id="@+id/vf_ad"
	       android:layout_width="fill_parent"
	       android:layout_height="114dp"
	       >
	    </com.gezitech.widget.ExtendViewFlipper > 
		<LinearLayout
	        android:id="@+id/pager_control"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_centerHorizontal="true"
	        android:layout_alignParentBottom="true"
	        android:gravity="center_vertical|center_horizontal"
	        android:layout_marginBottom="6dp"
	        >
	    </LinearLayout>
	</RelativeLayout>
	<ScrollView 
	 android:id="@+id/registered_scrollView"
	 android:layout_width="fill_parent"
	 android:layout_height="fill_parent"
	 android:layout_below="@+id/ll_adv">
		 <LinearLayout 
		 android:id="@+id/registered_middle"
		 android:layout_width="fill_parent"
		 android:layout_height="fill_parent"
		 android:layout_marginTop="12dp"
		 android:paddingLeft="18dp"
		 android:paddingRight="18dp"
		 android:orientation="vertical">
		 	<RadioGroup android:id="@+id/rg_user_type"
		 	    android:layout_width="fill_parent"
		 	    android:layout_height="48dp"
		 	    android:orientation="horizontal"
		 	    >
		 	    <RadioButton android:id="@+id/rb_business_no"
		 	        android:layout_width="wrap_content"
		 	        android:layout_weight="1.0"
		 	        android:layout_height="wrap_content"
		 	        android:text="个人用户"
		 	        android:drawableLeft="@drawable/radio_button_background"
		 	        android:button="@null"
		 	        android:checked="true"
		 	        android:background="@android:color/transparent"
		 	        android:drawablePadding="6dp"
		 	        android:layout_gravity="center_vertical|left"
		 	        android:textColor="@color/color323232"
		 	        />
		 	    <RadioButton android:id="@+id/rb_business_yes"
		 	        android:layout_width="wrap_content"
		 	        android:layout_weight="1.0"
		 	        android:text="商家用户"
		 	        android:drawableLeft="@drawable/radio_button_background"
		 	        android:button="@null"
		 	        android:drawablePadding="6dp"
		 	         android:background="@android:color/transparent"
		 	         android:layout_gravity="center_vertical|left"
		 	         android:textColor="@color/color323232"/>
		 	</RadioGroup>
		 	<View android:layout_width="fill_parent"
		 	    android:layout_height="1dp"
		 	    android:background="@color/colorececec"/>
			 <RelativeLayout
			 android:layout_width="fill_parent"
			 android:layout_height="48dp" >
				 <TextView
				 android:id="@+id/tv_phonenumber"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:layout_marginLeft="6dp"
				 android:text="@string/phonenumber"
				 android:textColor="@color/color323232"
				 android:textSize="@dimen/size14" 
				 android:layout_centerVertical="true"/>
				 <EditText
				 android:id="@+id/ed_phonenumber"
				 android:layout_width="fill_parent"
				 android:layout_height="fill_parent"
				 android:layout_gravity="center_vertical"
				 android:textColor="@color/selector_textcolor"
				 android:textSize="@dimen/size14"
				 android:paddingLeft="90dp"
				 android:inputType="phone"
			 	 android:background="@drawable/view_select" 
			 	 android:hint="请输入手机号码"
			 	 />
			</RelativeLayout>
			<RelativeLayout 
			 android:layout_width="fill_parent"
			 android:layout_height="48dp"
			 android:orientation="horizontal">
				 <TextView
				 android:id="@+id/tv_verification_code"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:layout_marginLeft="6dp"
				 android:text="@string/yanzhengma"
				 android:textColor="@color/color323232"
				 android:textSize="@dimen/size14"
				 android:layout_centerVertical="true" />
				 <EditText
					 android:id="@+id/ed_verification_code"
					 android:layout_width="fill_parent"
					 android:layout_height="fill_parent"
					 android:layout_gravity="center_vertical"
					 android:background="@drawable/view_select"
					 android:textColor="@color/selector_textcolor"
					 android:textSize="@dimen/size14"
					 android:layout_marginRight="90dp"
					 android:paddingLeft="90dp"
					 android:inputType="number"
					 android:hint="点击按钮获取" />
				<Button 
				 android:id="@+id/bt_send_verification_code"
				 android:layout_width="78dp"
				 android:layout_height="36dp"
				 android:layout_gravity="center_vertical"
				 android:layout_alignParentRight="true"
				 android:layout_alignParentBottom="true"
				 android:textSize="@dimen/size12"
				 android:textColor="@color/color323232"
				 android:text="@string/fasongyanzhengma"
				 android:background="@drawable/common_btn_gray"
				 android:hint="6-20位数字字母组成"/>
			</RelativeLayout>
			<RelativeLayout
			 android:id="@+id/enter_password"
			 android:layout_width="fill_parent"
			 android:layout_height="48dp"
			 android:orientation="horizontal" >
				 <TextView
					 android:id="@+id/tv_enter_password"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:layout_marginLeft="6dp"
					 android:text="@string/shurumima"
					 android:textColor="@color/color323232"
					 android:textSize="@dimen/size14" 
					 android:layout_centerVertical="true"
					 />
				 <EditText
					 android:id="@+id/ed_enter_password"
					 android:layout_width="fill_parent"
					 android:layout_height="fill_parent"
					 android:layout_gravity="center_vertical"
					 android:background="@drawable/view_select"
					 android:textColor="@color/selector_textcolor"
					 android:textSize="@dimen/size14"
					 android:paddingLeft="90dp"
					 android:inputType="textPassword"
					 android:hint="6-20位数字字母组成"
					  />
			</RelativeLayout>
			<RelativeLayout
			 android:id="@+id/input_again"
			 android:layout_width="fill_parent"
			 android:layout_height="48dp" >
				 <TextView
				 android:id="@+id/tv_input_again"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:layout_marginLeft="6dp"
				 android:text="@string/zaicishuru"
				 android:textColor="@color/color323232"
				 android:textSize="@dimen/size14"
				 android:layout_centerVertical="true" />
				 <EditText
				 android:id="@+id/ed_input_again"
				 android:layout_width="fill_parent"
				 android:layout_height="fill_parent"
				 android:layout_gravity="center_vertical"
			 	 android:background="@drawable/view_select"
				 android:textColor="@color/selector_textcolor"
				 android:inputType="textPassword"
				 android:textSize="@dimen/size14"
				 android:paddingLeft="90dp" 
				 android:hint="再次输入密码确认"/>
			</RelativeLayout>
			<RelativeLayout
			 android:id="@+id/invite_code"
			 android:layout_width="fill_parent"
			 android:layout_height="48dp"
			 android:orientation="horizontal" >
				 <TextView
				 android:id="@+id/tv_invite_code"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:layout_marginLeft="6dp"
				 android:text="@string/yaoqingma"
				 android:textColor="@color/color323232"
				 android:textSize="@dimen/size14" 
				 android:layout_centerVertical="true"/>
				 <EditText
				 android:id="@+id/ed_invite_code"
				 android:layout_width="fill_parent"
				 android:layout_height="fill_parent"
				 android:layout_gravity="center_vertical"
			 	 android:background="@drawable/view_select"
				 android:textColor="@color/selector_textcolor"
				 android:textSize="@dimen/size14"
				 android:paddingLeft="90dp"
				 />
			</RelativeLayout>
			<TextView 
			 android:id="@+id/xuantian"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:layout_marginTop="6dp"
			 android:text="@string/xuantian"
			 android:textSize="@dimen/size12"
			 android:textColor="@color/color949494"/>
			 <Button 
			 android:id="@+id/Registered_registered"
			 android:layout_width="fill_parent"
			 android:layout_height="42dp"
			 android:layout_marginTop="24dp"
			 android:text="@string/register"
			 android:textSize="@dimen/size18"
			 android:textColor="@color/white"
			 android:background="@drawable/button_common_btn_blue"/>
			 <LinearLayout android:layout_width="fill_parent"
			     android:layout_height="wrap_content"
			     android:orientation="horizontal"
			     
				 android:layout_marginTop="27dp"
			     android:gravity="center_vertical|center_horizontal">
			     <TextView 
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:text="注册或使用本软件代表您同意用户"
				 android:textSize="@dimen/size14"
				 android:textColor="@color/color949494"/> 
			     <TextView 
				 android:id="@+id/tv_service"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 
				 android:text="服务协议"
				 android:textSize="@dimen/size14"
				 android:textColor="@color/color3CA5F3"/> 
			 </LinearLayout>
			
			 <Button 
			 android:id="@+id/Registered_zhanghao"
			 android:layout_width="78dp"
			 android:layout_height="42dp"
			 android:layout_marginTop="27dp"
			 android:layout_marginBottom="24dp"
			 android:layout_gravity="center"
			 android:text="@string/yiyouzhanghao"
			 android:textSize="@dimen/size12"
			 android:textColor="@color/color323232"
			 android:background="@drawable/common_btn_gray"/>  
		</LinearLayout>
	</ScrollView>   
</RelativeLayout>
