<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
	<include layout="@layout/common_head"
	    android:id="@+id/i_head"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/header_height" />
	 <LinearLayout 
		 android:id="@+id/login_middle"
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:layout_marginTop="12dp"
		 android:paddingLeft="18dp"
		 android:paddingRight="18dp"
		 android:orientation="vertical"
		 android:layout_below="@+id/i_head">
	
		 <RelativeLayout
			 android:id="@+id/zhanghao"
			 android:layout_width="fill_parent"
			 android:layout_height="48dp"
			 android:clickable="true">
			 <TextView 
			  android:id="@+id/tv_zhanghao"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_marginLeft="6dp"
			  android:layout_gravity="center_vertical"
			  android:textColor="@color/color323232"
			  android:textSize="@dimen/size14"
			  android:layout_centerVertical="true"
			  android:text="@string/zhanghao"/>
			  <EditText 
			  android:id="@+id/ed_zhanghao"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:hint="@string/zp"
			  android:layout_gravity="center_vertical"
			  android:textSize="@dimen/size14"
			  android:textColor="@color/selector_textcolor"
			  android:background="@drawable/view_select"
			  android:paddingLeft="45dp"/>
		</RelativeLayout>
		<RelativeLayout
			 android:id="@+id/passworld"
			 android:layout_width="fill_parent"
			 android:layout_height="48dp"
			 android:clickable="true">
			 <TextView 
			  android:id="@+id/tv_passworld"
			  android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:layout_marginLeft="6dp"
			  android:layout_gravity="center_vertical"
			  android:textColor="@color/color323232"
			  android:textSize="@dimen/size14"
			  android:text="@string/passworld"
			  android:layout_centerVertical="true"/>
			  <EditText 
			  android:id="@+id/ed_passworld"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:layout_gravity="center_vertical"
			  android:hint="您的密码"
			  android:textSize="@dimen/size14"
			  android:inputType="textPassword"
			  android:textColor="@color/selector_textcolor"
			  android:background="@drawable/view_select"
			  android:paddingLeft="45dp"/>
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="12dp"
		    android:orientation="horizontal">
			 <CheckBox android:id="@+id/bt_remember_pass"
			     android:layout_width="wrap_content"
			     android:layout_height="30dp"
			     android:drawableLeft="@drawable/checkbox_background2"
			     android:text="记住密码"
			     android:background="@android:color/transparent"
			     android:textSize="@dimen/size14"
			   	 android:textColor="@color/selector_color"
			   	 android:drawablePadding="6dp"
			   	 android:checked="true"
			   	 android:button="@null"/>
			 <Button 
			   android:id="@+id/bt_forgot_password"
			   android:layout_width="70dp"
			   android:layout_height="30dp"
			   android:layout_alignParentRight="true"
			   android:layout_centerVertical="true"
			   android:textSize="@dimen/size14"
			   android:textColor="@color/selector_color"
			   android:background="@drawable/common_btn_gray"
			   android:text="@string/forgetpass"/>
		 </RelativeLayout>
		 <Button 
		   android:id="@+id/Login_login"
		   android:layout_width="fill_parent"
		   android:layout_height="42dp"
		   android:layout_marginTop="24dp"
		   android:text="@string/login"
		   android:textSize="@dimen/size18"
		   android:textColor="@color/white"
		   android:background="@drawable/button_common_btn_blue"/>
		     <RelativeLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:layout_marginTop="40dp">
                    <View android:layout_width="fill_parent"
			            android:layout_height="0.5dp"
			            android:background="#d0d0d0"
			            android:layout_centerVertical="true"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#EFEFEF"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="其它方式登录"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:textColor="#808080"
                        android:textSize="14sp"/>
                </RelativeLayout>
                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!-- <ImageButton android:id="@+id/ib_qq"
                        android:layout_width="fill_parent"
                        android:layout_height="54dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/qq_login_select"
                        android:layout_weight="1.0"/>
                    <ImageButton android:id="@+id/ib_weibo"
                        android:layout_width="fill_parent"
                        android:layout_height="54dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/weibo_login_select"
                        android:layout_weight="1.0"/> -->
                    <ImageButton android:id="@+id/ib_chat"
                        android:layout_width="fill_parent"
                        android:layout_height="54dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/chat_login_select"
                        android:layout_weight="1.0"/>
                </LinearLayout>
	  </LinearLayout> 
	  <Button 
	   android:id="@+id/Login_registered"
	   android:layout_width="78dp"
	   android:layout_height="42dp"
	   android:text="@string/register"
	   android:textSize="@dimen/size12"
	   android:textColor="@color/color323232"
	   android:background="@drawable/common_btn_gray"
	   android:layout_alignParentBottom="true"
	   android:layout_centerHorizontal="true"
	   android:layout_marginBottom="24dp"/>  
</RelativeLayout >
